# HashTagCrypto

./: .gitignore  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 기능-요청--feature-request-.md
backend/: .dockerignore  Dockerfile  app.py  config.py  fly.toml  pyproject.toml
backend/db/: supabase_client.py
backend/models/: request_models.py  response_models.py
backend/routes/: analyze.py
backend/services/: analyze_service.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: Features.tsx  Footer.tsx  Header.tsx  Hero.tsx
frontend/src/components/dashboard/: DashboardHeader.tsx  MainChart.tsx
frontend/src/components/dashboard/ReportSection/: ReportCard.tsx  ReportSection.tsx
frontend/src/components/dashboard/Sidebar/: RedditKeywords.tsx  SentimentGauge.tsx  Sidebar.tsx
