[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "litestar[standard]>=2.18.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "supabase>=2.22.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
